# viewssld

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  NOTICE  README  README.md  autogen.sh  config.status  configure  configure.in  distribute.sh.in
autom4te.cache/: output.1  traces.0  traces.1
doc/: Makefile  Makefile.am  Makefile.in  manual-ru.doc  viewssld.8
doc/examples/: viewssld.conf
src/: Makefile  Makefile.am  Makefile.in  utils.c  utils.h  viewssld.c  viewssld.h
